fix scrollbar

--- a/TopDeck/TopDeck.Client/Pages/DecksView.razor.css
+++ b/TopDeck/TopDeck.Client/Pages/DecksView.razor.css
@@ -12,7 +12,6 @@
 
 
 .deck-cards {
-    width: 100%;
     height: 100%;
     
     padding: 20px 8px 0 8px;
